# XFeat-Lightglue-TRT

./: .gitignore  CMakeLists.txt  README.md
config/: xfeat_lightglue.yaml
include/: lightglue.h  utils.h  xfeat.h
scripts/: example.py  example_gray.py  export.py  requriments.txt
scripts/modules/: xfeat.py
src/: lightglue.cpp  main.cpp  test_engine.cpp  xfeat.cpp
